--- a/practica_1.2/style_p.css
+++ b/practica_1.2/style_p.css
@@ -330,6 +330,10 @@ li{
     .redes__link{
         padding: 50px 0;
     }
+
+    .footer{
+        text-align: center;
+    }
 }
 
 @media screen and (max-width:500px) {
